* Fix side menu wrapping and restore switchmenu

--- a/mockup/css/style.css
+++ b/mockup/css/style.css
@@ -1508,9 +1508,16 @@ a.more {
   height: 36px;
   margin-right: 10px;
   vertical-align: middle;
-  margin-top: -10px;
+  margin-top: -20px;
   margin-bottom: -10px;
   margin-left: -10px;
   border: 3px solid white;
   padding: 0;
+}
+.nav_item_sidebar--sub .title_cht {
+  overflow: hidden;
+  max-width: 170px;
+  display: inline-block;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
